--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = odooec
 	url = git@github.com:cerealesandinos/odooec.git
 	branch = 10.0
+
+[submodule "cerealesandinos/theme-ca"]
+	path = cerealesandinos/theme-ca
+	url = git@github.com:cerealesandinos/theme-ca.git
+	branch = master
