--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = cerealesandinos/theme-ca
 	url = git@github.com:cerealesandinos/theme-ca.git
 	branch = master
+
+[submodule "muk-it/muk_web"]
+	path = muk-it/muk_web
+	url = git@github.com:muk-it/muk_web.git
+	branch = 10.0
