--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,7 @@
 	path = cerealesandinos/multiweb
 	url = git@github.com:cerealesandinos/multiweb.git
 	branch = multiw
+[submodule "multiweb"]
+	path = multiweb
+	url = git@github.com:cerealesandinos/multiweb.git
+	branch = 10.0
